Changelog
=========

1.0.1 (unreleased)
------------------

* ...

1.0 (2010/05/03)
----------------

* Initial release.
